--- a/index.html
+++ b/index.html
@@ -31,13 +31,20 @@
 		element.innerHTML = "Live"
 		console.log("Found ecksock5 is online.");
 	}
-
-
-
 });
 			});
-
 		</script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137352842-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137352842-1');
+</script>
+
 	</head>
 	<body class="is-preload">
 
