additional verification method

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		
 		<title>Ecksock</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -34,7 +35,8 @@
 });
 			});
 		</script>
-
+		
+<meta name="google-site-verification" content="IRyD8_l9VmlaSbObqa4czN42AqE-KAWca7WGXGrSSfI" />
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137352842-1"></script>
 <script>
