added analytics for all short links, discord.html, ico for shortlinks

--- a/discord.html
+++ b/discord.html
@@ -1,9 +1,8 @@
-<meta http-equiv="refresh" content="0; URL='https://www.twitch.tv/ecksock5'" />
+<meta http-equiv="refresh" content="0; URL='http://invite.gg/ecksock'" />
 
 <head>
-<title>Ecksock - Twitch</title>
+<title>Ecksock - Discord</title>
 <link rel="icon" href="images/eck_logo.png">
-
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137352842-1"></script>
 <script>
