--- a/donate.html
+++ b/donate.html
@@ -1,3 +1,17 @@
 <meta http-equiv="refresh" content="0; URL='https://streamlabs.com/ecksock5'" />
 
+
+<head>
 <title>Ecksock - Donations</title>
+<link rel="icon" href="images/eck_logo.png">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137352842-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137352842-1');
+</script>
+
+</head>
