ecksock event april ended

--- a/event.html
+++ b/event.html
@@ -1,5 +1,6 @@
 <head>
 <title>Ecksock - Events</title>
+<meta http-equiv="refresh" content="0; URL='/#events'" />
 <link rel="icon" href="images/eck_logo.png">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137352842-1"></script>
