--- a/index.html
+++ b/index.html
@@ -135,6 +135,16 @@
 							
 							</article>
 
+						<!-- Event -->
+						<article id="events">
+							<h2 class="major">Events</h2>
+							<p>There is no current event active.</p>
+
+							<h2>Previous Events</h2>
+							<h3>2019</h3>
+							<p class="primary button center"><a href="https://challonge.com/ecksock_events_1v1_april/" target="_blank">April: Random 1v1's</a></p>
+						</article>							
+
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
