--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 
 						<!-- Event -->
 						<article id="events">
-							<h2 class="major">Events</h2>
-							<p>There is no current event active.</p>
+							<h2>Current Events</h2>
+							<p class="primary button center"><a href="/event" target="_blank">September: Random 6v6's Signups</a></p>
 
 							<h2>Previous Events</h2>
 							<h3>2019</h3>
