--- a/event.html
+++ b/event.html
@@ -1,10 +1,12 @@
 <head>
 <title>Ecksock - Events</title>
-<meta http-equiv="refresh" content="0; URL='/#events'" />
+<!-- <meta http-equiv="refresh" content="0; URL='/#events'" /> -->
 <link rel="icon" href="images/eck_logo.png">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137352842-1"></script>
-<iframe src="https://challonge.com/ecksock_events_1v1_april/module" width="100%" height="1000" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
+<!-- <iframe src="https://challonge.com/ecksock_events_1v1_april/module" width="100%" height="1000" frameborder="0" scrolling="auto" allowtransparency="true"></iframe> -->
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScPgXLzvJo_LE7DJHDJYHfWV8Rr18Jwo8rx8wMFgr-8JEsX2w/viewform?embedded=true" width="1920" height="1080" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
