updated the signup page

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 	}
 });
 			});
-		</script>
-		
+</script>
 <meta name="google-site-verification" content="IRyD8_l9VmlaSbObqa4czN42AqE-KAWca7WGXGrSSfI" />
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137352842-1"></script>
@@ -63,7 +62,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Ecksock</h1>
-								<p>"Ecksock" a variety and Overwatch <a href="https://twitch.tv/" target="_blank">twitch.tv</a> streamer.</p>
+								<p>"Ecksock" an Overwatch and a variety <a href="https://twitch.tv/" target="_blank">twitch.tv</a> streamer.</p>
 							</div>
 						</div>
 						<nav>	
@@ -71,6 +70,7 @@
 								<li><a href="#intro">About Me</a></li>
 								<li><a href="#socials">Socials</a></li>
 								<li><a href="#live">My Twitch</a></li>
+								<li><a href="#events">Events</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
