6v6 sept data published

--- a/index.html
+++ b/index.html
@@ -137,12 +137,16 @@
 
 						<!-- Event -->
 						<article id="events">
-							<h2>Current Events</h2>
-							<p class="primary button center"><a href="/event" target="_blank">September: Random 6v6's Signups</a></p>
+							<h2>Current Event</h2>
+							<h3>September: 6v6</h3>
+							<p class="primary button center"><a href="/event/signup.html" target="_blank">Sign Ups</a></p>
+							<p class="primary button center"><a href="/event/bracket.html" target="_blank">Bracket</a></p>
+							<p class="primary button center"><a href="/event/teams.html" target="_blank">Teams List</a></p>
 
 							<h2>Previous Events</h2>
 							<h3>2019</h3>
 							<p class="primary button center"><a href="https://challonge.com/ecksock_events_1v1_april/" target="_blank">April: Random 1v1's</a></p>
+
 						</article>							
 
 						<!-- Contact -->
